# companymcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/company_mcp/: __init__.py  app.py  config.py  evaluation.py  main.py  mcp_main.py  mcp_only_app.py
src/company_mcp/cache/: __init__.py  company_table.py  store.py
src/company_mcp/extractors/: __init__.py  base.py  browser_snapshot.py  dom_rules.py  html_utils.py  llm_extract.py  metadata.py  registry.py
src/company_mcp/mcp/: __init__.py  schemas.py  server.py
src/company_mcp/models/: openrouter.py
src/company_mcp/providers/: company_overview.py  company_profile.py  linkedin_company_lookup.py  linkedin_lookup.py  tavily_news.py  wikipedia_company.py
src/company_mcp/scripts/: __init__.py  provider_smoke.py
tests/: test_cache_store.py  test_company_overview.py  test_company_profile_provider.py  test_company_profile_schema.py  test_company_table.py  test_evaluation.py  test_extractors.py  test_linkedin_company_lookup.py  test_linkedin_lookup.py  test_mcp_endpoint.py  test_openrouter.py  test_wikipedia_company.py
tests_docker/: test_running_stack.py
tests_live/: test_tavily_news_live.py
