[project]
name = "company-mcp"
version = "0.1.0"
description = "Company research MCP server for interview prep workflows."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.34.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "redis>=6.0.0",
  "fastmcp>=2.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/company_mcp"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
